@@ -117,6 +117,10 @@
                   <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/test/webapp-alt-jsp</directory>
                   <targetPath>webapp-alt-jsp</targetPath>
                 </resource>
+                <resource>
+                  <directory>${maven.multiModuleProjectDirectory}/jetty-ee9/jetty-ee9-webapp/src/test/webapp-with-resources</directory>
+                  <targetPath>webapp-with-resources</targetPath>
+                </resource>
               </resources>
             </configuration>
           </execution>
@@ -127,6 +131,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>@{argLine} ${jetty.surefire.argLine}
+               --add-exports org.eclipse.jetty.ee8.webapp/org.acme.webapp=org.eclipse.jetty.ee8.servlet
+               --add-exports org.eclipse.jetty.ee8.webapp/org.acme.webapp=org.eclipse.jetty.ee8.nested
                --add-reads org.eclipse.jetty.ee8.webapp=org.eclipse.jetty.logging</argLine>
           <useManifestOnlyJar>false</useManifestOnlyJar>
           <additionalClasspathElements>
